...
    <!--2-Cadenas de los elementos de la actividad mostrar claves -->
    <string name="titulo_mostrar_claves">Mostrar claves</string>
    <string name="texto_informativo_mostrar_claves">Seleccione una tarjeta para mostrar la clave dicotómica de ese género:</string>

    <!--3-Cadenas de los elementos de la actividad mostrar setas -->
    <string name="titulo_mostrar_setas">Mostrar setas</string>
    <string name="texto_informativo_mostrar_setas">Seleccione una tarjeta para mostrar la información de esa seta:</string>

    <!--4-Cadenas de los elementos de la actividad mostrar resultado-->
    <string name="texto_resultados_obtenidos">Resultados: </string>

    <!--5-Cadenas de los elementos de la actividad claveDicotomica -->
    <string name="texto_clave">Clave: </string>
...
    <string name="boton_clave">Ir clave dicotómica</string>

    <!--8-Cadenas de los elementos de la actividad MostrarComparativa -->
    <string name="texto_comparativa">Comparativa entre las imágenes:</string>

    <!-- Elementos del menú -->
    <string name="titulo_menu_1">Herramientas</string>
    <string name="home">Home</string>
    <string name="clasificar">Clasificar</string>
    <string name="claves">Ir claves dicotómicas</string>
    <string name="informacion">Información setas</string>
    <string name="titulo_menu_2">Opciones</string>
    <string name="idioma">Cambiar idioma</string>
    <string name="ayuda_menu">Ayuda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ayuda</string>

    <!--0-Cadenas de los elementos de la ayuda de lanzadora-->
    <string name="ayuda_lanzadora_0">Ayuda de la actividad principal:</string>
    <string name="ayuda_lanzadora_1">Para clasificar una foto pulse sobre el icono de la lupa.</string>
    <string name="ayuda_lanzadora_2">Para mostrar un listado de las setas disponibles pulse el icono de información.</string>
    <string name="ayuda_lanzadora_3">Para mostrar un listado de las claves dicotómicas disponibles pulse el siguiente botón.</string>
    <string name="ayuda_lanzadora_4">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--1-Cadenas de los elementos de la ayuda de recoger foto-->
    <string name="ayuda_recoger_0">Ayuda de la actividad recoger foto:</string>
    <string name="ayuda_recoger_1">Para cargar una foto desde la galería pulse el siguiente botón.</string>
    <string name="ayuda_recoger_2">Para cargar una foto desde la cámara del móvil pulse el siguiente botón.</string>
    <string name="ayuda_recoger_3">Para clasificar la foto pulse el siguiente botón (sólo aparece cuando se ha cargado una foto).</string>
...
    <!--2-Cadenas de los elementos de la ayuda de mostrar claves-->
    <string name="ayuda_mostrar_claves_0">Ayuda de la actividad mostrar claves:</string>
    <string name="ayuda_mostrar_claves_1">Para seleccionar una clave, pulse sobre una de las tarjetas.</string>
    <string name="ayuda_mostrar_claves_2">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--3-Cadenas de los elementos de la ayuda de mostrar claves-->
    <string name="ayuda_mostrar_setas_0">Ayuda de la actividad mostrar setas:</string>
    <string name="ayuda_mostrar_setas_1">Para seleccionar una seta y acceder a su información, pulse sobre una de las tarjetas.</string>
    <string name="ayuda_mostrar_setas_2">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--4-Cadenas de los elementos de la ayuda de mostrar resultados-->
    <string name="ayuda_mostrar_resultados_0">Ayuda de la actividad mostrar resultados:</string>
    <string name="ayuda_mostrar_resultados_1">La página mostrará las especies de setas mas probables clasificadas para la foto de seta introducida.
...
    <string name="ayuda_menu_6">Para mostrar la ayuda de la página actual pulse el siguiente botón.</string>

    <!--Nombres de las setas -->

    <string-array name="nombres_setas">
        <item>Agaricus urinascens</item>
        <item>Agrocybe parasitica</item>
        <item>Aleuria aurantia</item>
        <item>Amanita flavoconia</item>
        <item>Amanita muscaria</item>
        <item>Amanita muscaria guessowii</item>
        <item>Amanita pantherina</item>
        <item>Amanita phalloides</item>
...
