<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_seta"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_margin="3dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="10dp">

    <RelativeLayout

        android:id="@+id/relative_layout_tarjeta_seta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp"
        android:transitionName="layout_transition">

        <TextView
            android:id="@+id/inicial_tarjeta_seta"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="top"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/nombre_tarjeta_seta"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/inicial_tarjeta_seta"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/imagen_tarjeta_seta"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/nombre_tarjeta_seta"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</android.support.v7.widget.CardView>